# Kuramoto-MNIST

./: .gitignore  FINDINGS.md  README.md  make_dcgan_progress_grid.py  make_digits.py  make_progress_grid.py  pyproject.toml  train_dcgan.py  train_kuramoto.py
cloud/: README.md  UBUNTU.md  bootstrap.sh  env.sh  fetch_results.sh  train_digits.sh  train_long.sh  train_progress.sh
cloud/vast/: README.md  onstart.sh
digits/: manifest.json  progress_10x10.json
digits/dcgan/: progress_10x10.json  progress_40x10.json  progress_80x10.json  progress_manifest.json
digits/kuramoto/: progress_10x10.json  progress_40x10.json  progress_80x10.json  progress_manifest.json
eval/: benchmark.py  compare.py  fid.py
mnist_bench/: __init__.py  constants.py  data.py  dcgan.py  digit_features.py  digits.py  factory.py  metrics.py
research/: README.md  comparison_100epoch.md  fair_comparison.md  fair_comparison_400epoch.md  fair_comparison_800epoch.md
scripts/: clean_progress_artifacts.sh  dump_mnist_reals.py  generate_synthetic_digits.py  pretrain_digit_encoder.py  rebuild_progress_grid.py  resume_fair_comparison.sh  resume_kuramoto_200.sh  run_comparison_100epoch.py  run_fair_comparison_400.sh  train_quality_local.sh
