[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kuramoto-mnist"
version = "0.1.0"
description = "MNIST benchmark: Un-0 Kuramoto dynamics vs DCGAN"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
dependencies = [
    "un0 @ git+https://github.com/hcm444/Un-0.git",
    "numpy>=1.24.0",
    "Pillow>=9.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
eval = [
    "clean-fid>=0.1.35",
]

[tool.setuptools]
packages = ["mnist_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"train_*.py" = ["D103", "INP001"]
"eval/*" = ["D103", "INP001"]
"scripts/*" = ["D103", "INP001"]
